--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
+<head>
+    <meta charset="UTF-8"/>
     <title>Hello World!</title>
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'"
-    />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/renderer.tsx"></script>
-  </body>
+    <meta http-equiv="Content-Security-Policy"
+          content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; connect-src 'self' http://localhost:3000;">
+
+</head>
+<body>
+<div id="root"></div>
+<script type="module" src="/src/renderer.tsx"></script>
+</body>
 </html>
